fix(navigation-menu): adjust alignment on desktop - INNO-773

--- a/framework/components/ecl-navigation/ecl-navigation-menus/_horizontal-menus.scss
+++ b/framework/components/ecl-navigation/ecl-navigation-menus/_horizontal-menus.scss
@@ -25,6 +25,7 @@
   @include ecl-media-breakpoint-up(md) {
     background-color: transparent;
     flex-direction: row;
+    margin: 0 (-(map-get($ecl-spacing, 's')));
   }
 }
 
